<resources>
    <string name="app_name">Alqoriny-midT1</string>
    <string name="time">seconds</string>
    <string name="btn">INSERT</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone No. :</string>
    <string name="act2">Go to Activity 2</string>
    <string name="act3">Go to Activity 3</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="search">SEARCH</string>
    <string name="fetchA">fetch all</string>
    <string name="fetchI">fetch Input</string>
</resources>